--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start:dev": "nodemon --watch src/ src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-yaml": "^4.1.0"
+  }
 }
